
Tue Nov  2 13:31:28 PST 1999
(KainX)

An update from Matt McClanahan <cardinal@dodds.net> to his previous patch.

-------------------------------------------------------------------------------

Tue Nov  2 18:28:36 PST 1999
(KainX)

A new cloak mode for E-ScreenShoot...random!  You can guess what it does.

-------------------------------------------------------------------------------

Wed Nov  3 23:58:36 GMT 1999
(gilbertt)

More late-night coding for Tom ;-)
The trouble with using a .1f format string for something which will
accept a < 0.1 value, is that the value is written as 0.
This is clearly not a good idea, and led to an interesting 5 minutes
bug-hunt.

-------------------------------------------------------------------------------

Thu Nov  4 16:00:26 PST 1999
(KainX)

E-Slides, a slideshow epplet.  This is just the initial version; more features
coming soon.  :-)

Also some API additions/bugfixes.

-------------------------------------------------------------------------------

Thu Nov  4 18:39:32 PST 1999
(KainX)

Several new features for E-Slides and some new icons.

-------------------------------------------------------------------------------

Fri Nov  5 10:44:18 PST 1999
(KainX)

The zoom button works now.  It executes an arbitrary command and replaces an
occurance of %s in the string with the current image filename.  The default
is "ee %s".

-------------------------------------------------------------------------------

Fri Nov  5 16:36:55 PST 1999
(KainX)

E-Xss, an xscreensaver epplet.  Unfortunately, xscreensaver crashes my X
server on a regular basis, so I'll have to continue development for this at
home.  It currently has...issues.

-------------------------------------------------------------------------------

Sat Nov  6 12:03:16 PST 1999
(KainX)

Well, it seems to work pretty well at this point.  Now I just need to figure
out how to support multiple hacks (which is what those previous/next buttons
are for).